--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCat.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateCat.cshtml
@@ -11,6 +11,35 @@
     Cập nhật thông tin dannh mục phòng
 }
 
+@section style{
+    <link href="~/Content/css/bootstrap-select.min.css" rel="stylesheet" />
+    <link href="~/Content/css/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
+    <link href="~/Content/css/summernote.css" rel="stylesheet" />
+    <style type="text/css">
+    </style>
+}
+
+@section script{
+    <script src="~/Content/js/bootstrap-select.min.js"></script>
+    <script src="~/Content/js/jquery.bootstrap-touchspin.min.js"></script>
+    <script src="~/Content/js/summernote.min.js"></script>
+    <script type="text/javascript">
+        $('.selectpicker').selectpicker({
+            //style: 'btn-info',
+            //size: 4
+        });
+        $("input[name='PriceInfo']").TouchSpin({
+            initval: 500,
+            min: 500,
+            max: 1000000000,
+            stepinterval: 50,
+            maxboostedstep: 10000000,
+            prefix: 'VNĐ'
+        });
+    </script>
+
+}
+
 <div class="row">
     <div class="col-md-12">
         @if (ViewBag.ErrorMsg != null)
@@ -25,38 +54,29 @@
         @using (Html.BeginForm("AddCat", "ManageRoom", FormMethod.Post, new { @class = "form-horizontal", id = "frmAdd", enctype = "multipart/form-data" }))
         {
             <div class="form-group">
-                @*@Html.LabelFor(m => m.CatIDInfo, "ID danh mục phòng:", new { @class = "col-md-3 control-label" })
-                    <div class="col-sm-8 form-control-static">
-                        @Html.DisplayFor(m => m.CatIDInfo, new { @class = "form-control", placeholder = "id danh mục phòng" })
-                    </div>*@
-                @Html.HiddenFor(m => m.CatIDInfo)
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
+                @Html.LabelFor(m => m.CatNameInfo, "Tên loại phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.CatNameInfo, new { @class = "form-control", placeholder = "Tên loại phòng" })
                 </div>
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.CatTypeInfo, "Loại phòng:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
+                @Html.LabelFor(m => m.CatTypeInfo, "Loại phòng:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.CatTypeInfo, new { @class = "form-control", placeholder = "Loại phòng" })
                 </div>
             </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
-                    @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", placeholder = "Đơn giá" })
+            <div class="form-group">
+                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
+                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá">
                 </div>
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-md-3 control-label" })
-                <div class="col-sm-8 form-control-static">
+
+                @Html.LabelFor(m => m.NoteInfo, "Ghi chú:", new { @class = "col-sm-2 control-label" })
+                <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.NoteInfo, new { @class = "form-control", placeholder = "Ghi chú" })
                 </div>
             </div>
+
             <div class="form-group">
-                <div class="col-sm-offset-6 col-sm-12">
+                <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-primary">
                         <i class="fa fa-check"></i>
                         &nbsp;Cập nhật
