--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/AddRoom.cshtml
@@ -30,7 +30,7 @@
             //size: 4
         });
         $("input[name='PriceInfo']").TouchSpin({
-            initval: 500,
+            //initval: 500,
             min: 500,
             max: 1000000000,
             stepinterval: 50,
@@ -65,10 +65,12 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                @*@Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
-                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá" disabled>
-                </div>
+                    <input name="PriceInfo" type="text" class="form-control" placeholder="Đơn giá" disabled/>
+                </div>*@
+
+
 
                 @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
