--- a/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateRoom.cshtml
+++ b/MVCQLKS/MVCQLKS/Views/ManageRoom/UpdateRoom.cshtml
@@ -65,10 +65,13 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
+                @*@Html.LabelFor(m => m.PriceInfo, "Đơn giá:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
                     @Html.TextBoxFor(m => m.PriceInfo, new { @class = "form-control", type = "text", disabled = "disabled" } )
-                </div>
+                </div>*@
+
+
+
 
                 @Html.LabelFor(m => m.StatusInfo, "Tình trạng:", new { @class = "col-sm-2 control-label" })
                 <div class="col-sm-4">
